vlib/v/checker/tests/cast_string_to_ptr_err.vv
fn main() {
	_ := &char('foo')
}
